--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -2422,10 +2422,12 @@ results <- lapply(seq_along(final_models_update),
                key = k, formule = f, binned = b, Pa_hat = p, SE = se)
   })
 
-
 do.call(rbind, results) %>%
   kable(digits = 3)
 ```
+
+
+## Densiteitschattingen 2022
 
 
 
