rename perimeter file for leefdaal

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -157,7 +157,7 @@ wellicht aan te passen naar jaar == 2021 of 2022?
 list(
   tarchetypes::tar_file(
     perimeters_file,
-    path_to_perimeters("zandleemstreek_perimeters.gpkg")
+    path_to_perimeters("leefdaal_perimeters.gpkg")
     ),
   tar_target(
     perimeters_data,
