create model fit for all strata

--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -2283,14 +2283,78 @@ final_models <- list(Blauwborst = Blauwborst_distmod_2022_hn1,
 ```{r}
 for (naam in names(final_models)) {
   ds_model_2018_2022 <- final_models[[naam]]
+  f <- ds_model_2018_2022$ddf$ds$aux$ddfobj$scale$formula
   titel <- paste(unlist(strsplit(naam, "(?<=[a-z])(?=[A-Z])", 
                                  perl = TRUE)), collapse = " ")
   par(mfrow = c(1, 2))
   von_mises <- gof_ds(ds_model_2018_2022)
   plot(ds_model_2018_2022 , pdf = TRUE, showpoints = FALSE,
        main = titel)
-  print(titel)
+  print(paste(titel, f, sep = " - "))
   print(von_mises)
+  
+  par(mfrow = c(5, 2))
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "De Moeren" & jaar == "2018",
+       main = "De Moeren - 2018", pl.col = alpha("blue", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "blue",
+    data = data.frame(regio = "De Moeren", jaar = "2018"), pdf = TRUE)
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "Oostelijke leemstreek" & jaar == "2018",
+       main = "Oostelijke leemstreek - buiten", pl.col = alpha("darkgreen", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "darkgreen",
+    data = data.frame(regio = "Oostelijke leemstreek", jaar = "2018"), pdf = TRUE)
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "De Moeren" & jaar == "2019",
+       main = "De Moeren - buiten", pl.col = alpha("darkgreen", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "darkgreen",
+    data = data.frame(regio = "De Moeren", jaar = "2019"), pdf = TRUE)
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "Oostelijke leemstreek" & jaar == "2019",
+       main = "Oostelijke leemstreek - buiten", pl.col = alpha("darkgreen", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "darkgreen",
+    data = data.frame(regio = "Oostelijke leemstreek", jaar = "2019"), pdf = TRUE)
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "De Moeren" & jaar == "2020",
+       main = "De Moeren - 2020", pl.col = alpha("brown", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "brown",
+    data = data.frame(regio = "De Moeren", jaar = "2020"), pdf = TRUE)
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "Oostelijke leemstreek" & jaar == "2020",
+       main = "Oostelijke leemstreek - 2020", pl.col = alpha("brown", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "brown",
+    data = data.frame(regio = "Oostelijke leemstreek", jaar = "2020"), pdf = TRUE)
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "De Moeren" & jaar == "2021",
+       main = "De Moeren - 2021", pl.col = alpha("salmon", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "salmon",
+    data = data.frame(regio = "De Moeren", jaar = "2019"), pdf = TRUE)
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "Oostelijke leemstreek" & jaar == "2021",
+       main = "Oostelijke leemstreek - 2021", pl.col = alpha("salmon", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "salmon",
+    data = data.frame(regio = "Oostelijke leemstreek", jaar = "2019"), pdf = TRUE)
+  
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "De Moeren" & jaar == "2022",
+       main = "De Moeren - 2022", pl.col = alpha("gold", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "gold",
+    data = data.frame(regio = "De Moeren", jaar = "2022"), pdf = TRUE)
+
+  plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
+       subset = regio == "Oostelijke leemstreek" & jaar == "2022",
+       main = "Oostelijke leemstreek - 2022", pl.col = alpha("gold", 0.5))
+  add.df.covar.line(ds_model_2018_2022, lwd = 3, lty = 1, col = "gold",
+    data = data.frame(regio = "Oostelijke leemstreek", jaar = "2022"), pdf = TRUE)
+  
   par(mfrow = c(1, 1))
   
   print(plot_detection_curve(ds_model_2018_2022) +
